fixed horizontal scroll bar appearing

--- a/app/app.css
+++ b/app/app.css
@@ -8,6 +8,7 @@ body{
   /*background-size: cover;*/
   /*font-family: 'Lobster',cursive;*/
   font-family: 'Cabin', sans-serif;
+  overflow-x:hidden;
 
 }
 
